--- a/PeerConnect/templates/PeerConnect/course_form.html
+++ b/PeerConnect/templates/PeerConnect/course_form.html
@@ -14,23 +14,41 @@
     <title>PeerConnect</title>
 </head>
 <body>
-    <form method="POST" action="{% url 'course_form' %}">
-        {% csrf_token %}
-        <label for="name">Course</label>
-        <input type="text" id="name" name="name" required>
-        
-        <label for="students">Students</label>
-        <input list="students" name="student" required>
-            <datalist id="students">
-                <option value="Lena">
-                <option value="Priyal">
-                <option value="Nick">
-                <option value="Aimee">
-                <option value="Evan">
-                <option value="Zephan">
-            </datalist>
+    <div class="course-form-wrapper">
+        <form method="POST" action="{% url 'create_course' %}">
+            {% csrf_token %}
 
-        <button type="submit">Create Course</button>
-    </form>
+            <h1 id="title">Create a Course</h1>
+            <label for="name">Course</label>
+            <input type="text" id="name" name="name" required>
+            
+            <label for="students">Students</label>
+            <!--<input type="text" id="students" name="students" list="students-list" placeholder="Start typing to search..." required multiple>
+
+            <datalist id="students-list">
+                {% for student in students %}
+                    <option value="{{ student.user.first_name }} {{ student.user.last_name }}" data-id="{{ student.id }}">
+                {% endfor %}
+            </datalist>
+            
+            <button type="submit">Add</button>
+            
+            <div class="selected-students">
+                {% if selected_students %}
+                    {% for student in selected_students %}
+                        <span>{{ student.user.first_name }} {{ student.user.last_name }}</span>
+                    {% endfor %}
+                {% endif %}
+            </div>-->
+            
+            <select id="students" name="students" multiple required>
+                {% for student in students %}
+                    <option value="{{ student.id }}">{{ student.user.first_name }} {{ student.user.last_name }}</option>
+                {% endfor %}
+            </select>
+
+            <button type="submit">Create Course</button>
+        </form>
+    </div>
 </body>
 </html>
