--- a/PeerConnect/templates/PeerConnect/create.html
+++ b/PeerConnect/templates/PeerConnect/create.html
@@ -5,7 +5,11 @@
 
    <div class="left-column">
       <div class="title">Courses</div>
-      <div class="course-box">CSCI 1011</div>
+      <div class="course-box">
+         {% for course in courses %}
+            {{ course.name }}
+         {% endfor %}
+      </div>
       <div class="new-course"><a href="#course-popup">Create Course</a></div>
    </div>
 
@@ -43,7 +47,10 @@
 
 <div id="course-popup" class="modal">
    <div class="modal-content">
-      <a href="#" class="close">&times;</a> <!-- Close button -->
+      <div class="modal-header">
+         <h1 id="title">Create a Course</h1>
+         <a href="#" class="close">&times;</a> <!-- Close button -->
+      </div>
       {% include 'PeerConnect/course_form.html' %}
    </div>
 </div>
